--- a/revo/index.html
+++ b/revo/index.html
@@ -510,8 +510,9 @@
             <div class="card-horizon">
               <img src="/assets/resources-1.jpg" class="img-fluid" alt="">
               <div class="card-body">
-                <div class="title">User Showcases</div>
-                <div class="description">Check out these awesome customer showcases to convince you to give Revo and try right away
+                <div class="title">Knowledge Center</div>
+                <div class="description">Knowledge Center
+We've gathered some great resources to help you learn how to use Revo and overcome
 
 </div>
               </div>
@@ -522,6 +523,44 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer Section -->
+
+  <footer id="footer-section">
+    <div class="container">
+    <div class="row">
+      <div class="col-lg-5">
+        <div class="title-footer">About Company</div>
+        <p>Revo is a desktop app website Bootstrap HTML template created for desktop applications, to present their features and control panel options</p>
+      </div>
+      <div class="col-lg-4">
+        <div class="title-footer"> 
+Links</div>
+        <p>Revo is a desktop app website Bootstrap HTML template created for desktop applications, to present their features and control panel options</p>
+      </div>
+      <div class="col-lg-3">
+        <div class="social-image">
+          <a href="" class="icon">
+            <i class="uim uim-twitter-alt"></i>
+          </a>
+          <a href="" class="icon">
+            <i class="uim uim-twitter-alt"></i>
+          </a>
+          <a href="" class="icon">
+            <i class="uim uim-twitter-alt"></i>
+          </a>
+          <a href="" class="icon">
+            <i class="uim uim-twitter-alt"></i>
+          </a>
+        </div>
+        <div class="text-right">
+        <p>We would love to hear from you</p>
+        <p><span>contact@website.com</p>
+      </div>
+      </div>
+    </div>
+    </div>
+  </footer>
     <!-- Script Custom -->
 
 <script>
