--- a/revo/index.html
+++ b/revo/index.html
@@ -416,7 +416,7 @@
       <div class="row testimoni">
          <div class="col-lg-12">
           <div class="mid-text mb-4">
-            <h2>Video Presentation</h2>
+            <h2>Testimonials</h2>
             <p>Check out our video presentation for Revo desktop app. It will take you through an entire design project from the initial sketch to the final code</p>
           </div>
           </div>
@@ -529,34 +529,54 @@ We've gathered some great resources to help you learn how to use Revo and overco
   <footer id="footer-section">
     <div class="container">
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-4">
+          <div class="about-footer">
         <div class="title-footer">About Company</div>
         <p>Revo is a desktop app website Bootstrap HTML template created for desktop applications, to present their features and control panel options</p>
       </div>
+      </div>
       <div class="col-lg-4">
+      
         <div class="title-footer"> 
 Links</div>
-        <p>Revo is a desktop app website Bootstrap HTML template created for desktop applications, to present their features and control panel options</p>
+       <ul class="list-footer">
+         <li>
+           <p>Important : <a href="">Terms & Conditions</a>, <a href="">Privacy Policy</a></p>
+         </li>
+         <li>
+           <p>Useful : <a href="">Colorpicker</a>, <a href="">Icon Library</a>, <a href="">Illustration</a></p>
+         </li>
+         <li>
+           <p>Menu : <a href="">Home</a>, <a href="">Trial</a>,<a href="">Features</a>, <a href="">Details</a></p>
+         </li>
+       </ul>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-4">
         <div class="social-image">
           <a href="" class="icon">
             <i class="uim uim-twitter-alt"></i>
           </a>
           <a href="" class="icon">
-            <i class="uim uim-twitter-alt"></i>
+           <i class="uim uim-instagram-alt"></i>
           </a>
           <a href="" class="icon">
-            <i class="uim uim-twitter-alt"></i>
+            <i class="uim uim-facebook"></i>
           </a>
           <a href="" class="icon">
-            <i class="uim uim-twitter-alt"></i>
+            <i class="uim uim-telegram-alt"></i>
           </a>
         </div>
         <div class="text-right">
         <p>We would love to hear from you</p>
         <p><span>contact@website.com</p>
       </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="text text-center mt-4">
+          Copyright © Name
+        </div>
       </div>
     </div>
     </div>
