--- a/revo/index.html
+++ b/revo/index.html
@@ -26,7 +26,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <title>Hello, world!</title>
+    <title>Revo Page</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -224,7 +224,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card">
            <i class="uim uim-rocket"></i>
               <div class="card-body">
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card">
           <i class="uim uim-gitlab-alt"></i>
               <div class="card-body">
@@ -242,7 +242,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card">
           <i class="uim uim-window-grid"></i>
               <div class="card-body">
@@ -315,7 +315,7 @@
     <h3>Prototype Easier With Revo</h3>
     <p>It's now easier than ever to get your ideas into completed designs with Revo desktop app. Our features section shows how we are able to achieve all this.</p>
 
-    <div class="feature mb-4">
+    <div class="feature">
           <ul>
             <li class="list">
               <i data-feather="check"></i>
